--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "express-session": "^1.18.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
