Add static files handling and change uploads dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
+#My ignoring files
+/**/uploads
+/**/sessionSocket*
+/**/socketSessionAuth*
+
 # compiled output
 /dist
 /node_modules
 /build
+
 
 # Logs
 logs
