--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,4 @@
 services:
-    backend:
-        build: ./ffsmidjs-diploma-backend
-        volumes:
-            - ./volume:/volume
-        ports:
-            - 3000:3000
-        environment:
-            - DATABASE_URL="postgresql://postgres:1234@localhost:5432/libraries-2?schema=public"
-            - SESSION_SECRET=e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
-
-    frontend:
-        build: ./ffsmidjs-diploma-frontend
-        volumes:
-            - ./volume:/volume
-        ports:
-            - 5174:5174
-        environment:
-            - VITE_SERVER_URL=backend
-
     postgres:
         image: postgres:17
         restart: always
@@ -28,4 +9,32 @@ services:
         ports:
             - "5432:5432"
         volumes:
-            - postgres-data:/var/lib/postgresql/data
+            - ./volume/db:/var/lib/postgresql/data
+        healthcheck:
+            test: ["CMD-SHELL", "pg_isready -U postgres"]
+            interval: 10s
+            timeout: 5s
+            retries: 5
+            start_period: 30s
+
+    backend:
+        build: ./ffsmidjs-diploma-backend
+        depends_on:
+            postgres:
+                condition: service_healthy
+        volumes:
+            - ./volume/backend/uploads:/app/uploads
+        ports:
+            - 3000:3000
+        environment:
+            - DATABASE_URL=postgresql://postgres:1234@postgres:5432/libraries-2?schema=public
+            - SESSION_SECRET=e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
+
+    frontend:
+        build: ./ffsmidjs-diploma-frontend
+        volumes:
+            - ./volume:/volume
+        ports:
+            - 5173:5173
+        environment:
+            - VITE_SERVER_URL=http://localhost:3000
